kubernetes/apps/ai/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ai
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
    volsync.backube/privileged-movers: "true"
